--- a/pom.xml
+++ b/pom.xml
@@ -55,5 +55,10 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.12.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-ehcache</artifactId>
+			<version>5.6.14.Final</version>
+		</dependency>
 	</dependencies>
 </project>
