--- a/pom.xml
+++ b/pom.xml
@@ -60,5 +60,11 @@
 			<artifactId>hibernate-ehcache</artifactId>
 			<version>5.6.14.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
